# rooms

./: .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  main.py  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
desk/: __init__.py  main.py  pyproject.toml
desk/files/: __init__.py  upload.py
desk/pages/: __init__.py  ohlcv.py
desk/plotting/: __init__.py  backtest.py  candles.py
desk/stats/: __init__.py  metrics.py
desk/typing/: __init__.py  vectorbt.py
docs/: VECTORBT_PORTFOLIO_API.md  VECTORBT_QUICK_REFERENCE.md
lab/: main.py  pyproject.toml
replay/: CHANGELOG.md  main.py  pyproject.toml
replay/pages/: __init__.py  goldencross.py
replay/strategies/: goldencross.py
tape/: CHANGELOG.md  __init__.py  main.py  pyproject.toml
tape/models/: __init__.py  bybit.py  instruments.py  ohlcv.py
tape/pages/: __init__.py  binance.py  bybit.py  gecko.py
