[project]
name = "rooms"
version = "0.1.0"
description = "Welcome to all my trading rooms!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "loguru>=0.7.3",
  "numpy>=2.3.3",
  "pandas>=2.3.3",
  "streamlit>=1.50.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pre-commit>=3.8.0"]

[tool.uv.workspace]
members = ["desk", "tape", "replay", "lab"]

[tool.ruff]
preview = true
line-length = 100

[tool.pyright]
typeCheckingMode = "standard"
