[project]
name = "tape"
version = "0.1.0"
description = "This is the room where all the data is harvested."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "pydantic>=2.11.10", "desk"]

[tool.uv.sources]
desk = { workspace = true }

[tool.pyright]
venv = ".venv"
venvPath = "../"
extraPaths = [".."]
typeCheckingMode = "standard"
